--- a/package.json
+++ b/package.json
@@ -33,7 +33,7 @@
   },
   "dependencies": {
     "classnames": "^2.1.2",
-    "object-assign": "^2.0.0",
+    "object-assign": "~2.1.1",
     "react": "^0.13.3",
     "uxcore-kuma": "~1.0.3"
   },
