--- a/package.json
+++ b/package.json
@@ -29,13 +29,13 @@
     "gulp-just-replace": "~1.0.2",
     "gulp-less": "~3.0.3",
     "gulp-sourcemaps": "~1.5.2",
-    "webpack": "^1.10.5"
+    "webpack": "^1.10.5",
+    "react": "^0.14.0",
+    "uxcore-kuma": "~1.1.0"
   },
   "dependencies": {
     "classnames": "^2.1.2",
-    "object-assign": "~2.1.1",
-    "react": "^0.13.3",
-    "uxcore-kuma": "~1.0.3"
+    "object-assign": "~2.1.1"
   },
   "contributors": [],
   "license": "MIT"
