--- a/package.json
+++ b/package.json
@@ -15,8 +15,7 @@
     "react",
     "react-component",
     "uxcore-tinymce",
-    "Tinymce",
-    ""
+    "Tinymce"
   ],
   "devDependencies": {
     "babel-core": "^5.6.18",
@@ -35,7 +34,8 @@
   },
   "dependencies": {
     "classnames": "^2.1.2",
-    "object-assign": "~2.1.1"
+    "object-assign": "~2.1.1",
+    "react-dom": "~0.14.0"
   },
   "contributors": [],
   "license": "MIT"
