--- a/package.json
+++ b/package.json
@@ -30,12 +30,12 @@
     "gulp-sourcemaps": "~1.5.2",
     "webpack": "^1.10.5",
     "react": "^0.14.0",
-    "uxcore-kuma": "~1.1.0"
+    "uxcore-kuma": "~1.1.0",
+    "react-dom": "~0.14.0"
   },
   "dependencies": {
     "classnames": "^2.1.2",
-    "object-assign": "~2.1.1",
-    "react-dom": "~0.14.0"
+    "object-assign": "~2.1.1"
   },
   "contributors": [],
   "license": "MIT"
