--- a/package.json
+++ b/package.json
@@ -1,42 +1,53 @@
 {
-  "name": "uxcore-tinymce",
-  "version": "0.1.6",
-  "description": "uxcore-tinymce component for uxcore.",
-  "repository": "https://github.com/uxcore/uxcore-tinymce.git",
-  "author": "eternalsky",
-  "main": "src/index.js",
-  "scripts": {
-    "dev": "gulp server"
-  },
-  "bugs": {
-    "url": "http://github.com/uxcore/uxcore-tinymce/issues"
-  },
-  "keywords": [
-    "react",
-    "react-component",
-    "uxcore-tinymce",
-    "Tinymce"
-  ],
-  "devDependencies": {
-    "babel-core": "^5.6.18",
-    "babel-loader": "^5.3.1",
-    "browser-sync": "~2.8.2",
-    "console-polyfill": "~0.2.1",
-    "es5-shim": "~4.1.10",
-    "gulp": "~3.9.0",
-    "gulp-concat": "~2.6.0",
-    "gulp-just-replace": "~1.0.2",
-    "gulp-less": "~3.0.3",
-    "gulp-sourcemaps": "~1.5.2",
-    "webpack": "^1.10.5",
-    "react": "^0.14.0",
-    "uxcore-kuma": "~1.1.0",
-    "react-dom": "~0.14.0"
-  },
-  "dependencies": {
-    "classnames": "^2.1.2",
-    "object-assign": "~2.1.1"
-  },
-  "contributors": [],
-  "license": "MIT"
+ "name": "uxcore-tinymce",
+ "version": "0.1.7",
+ "description": "uxcore-tinymce component for uxcore.",
+ "repository": "https://github.com/uxcore/uxcore-tinymce.git",
+ "author": "eternalsky",
+ "main": "build/index.js",
+ "scripts": {
+  "dev": "gulp server"
+ },
+ "bugs": {
+  "url": "http://github.com/uxcore/uxcore-tinymce/issues"
+ },
+ "keywords": [
+  "react",
+  "react-component",
+  "uxcore-tinymce",
+  "Tinymce"
+ ],
+ "devDependencies": {
+  "babel-core": "~6.4.0",
+  "babel-loader": "~6.2.1",
+  "babel-plugin-add-module-exports": "~0.1.2",
+  "babel-preset-es2015": "~6.3.13",
+  "babel-preset-react": "~6.3.13",
+  "babel-preset-stage-1": "~6.3.13",
+  "browser-sync": "~2.11.0",
+  "colors": "^1.1.2",
+  "console-polyfill": "~0.2.1",
+  "cross-spawn": "^2.1.5",
+  "es3ify-loader": "~0.1.0",
+  "es5-shim": "~4.1.10",
+  "gulp": "~3.9.0",
+  "gulp-babel": "~6.1.1",
+  "gulp-concat": "~2.6.0",
+  "gulp-es3ify": "0.0.0",
+  "gulp-just-replace": "~1.0.2",
+  "gulp-less": "~3.0.3",
+  "gulp-sourcemaps": "~1.5.2",
+  "html-wiring": "~1.2.0",
+  "inquirer": "^0.12.0",
+  "react": "~0.14.0",
+  "react-dom": "~0.14.0",
+  "uxcore-kuma": "~1.1.0",
+  "webpack": "^1.10.5"
+ },
+ "dependencies": {
+  "classnames": "^2.1.2",
+  "object-assign": "^4.0.0"
+ },
+ "contributors": [],
+ "license": "MIT"
 }
