--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
  "name": "uxcore-tinymce",
- "version": "0.1.7",
+ "version": "0.1.8",
  "description": "uxcore-tinymce component for uxcore.",
  "repository": "https://github.com/uxcore/uxcore-tinymce.git",
  "author": "eternalsky",
@@ -21,7 +21,7 @@
   "babel-core": "~6.4.0",
   "babel-loader": "~6.2.1",
   "babel-plugin-add-module-exports": "~0.1.2",
-  "babel-preset-es2015": "~6.3.13",
+  "babel-preset-es2015-loose": "~7.0.0",
   "babel-preset-react": "~6.3.13",
   "babel-preset-stage-1": "~6.3.13",
   "browser-sync": "~2.11.0",
