--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
  "name": "uxcore-tinymce",
- "version": "0.1.8",
+ "version": "0.1.9",
  "description": "uxcore-tinymce component for uxcore.",
  "repository": "https://github.com/uxcore/uxcore-tinymce.git",
  "author": "eternalsky",
@@ -46,6 +46,7 @@
  },
  "dependencies": {
   "classnames": "^2.1.2",
+  "deep-equal": "~1.0.1",
   "object-assign": "^4.0.0"
  },
  "contributors": [],
