--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -8,6 +8,7 @@
   },
   "rules": {
     "import/no-extraneous-dependencies": "off",
-    "react/jsx-no-bind": "off"
+    "react/jsx-no-bind": "off",
+    "react/forbid-prop-types": "off"
   }
 }
