--- a/package.json
+++ b/package.json
@@ -31,16 +31,15 @@
     "Tinymce"
   ],
   "devDependencies": {
+    "babel-polyfill": "6.x",
     "console-polyfill": "^0.2.2",
     "enzyme": "^3.0.0",
-    "enzyme-adapter-react-15": "^1.0.0",
-    "es5-shim": "^4.5.8",
+    "enzyme-adapter-react-16": "1.x",
     "expect.js": "~0.3.1",
     "kuma-base": "1.x",
-    "react": "15.x",
-    "react-addons-test-utils": "15.x",
-    "react-dom": "15.x",
-    "react-test-renderer": "15.x",
+    "react": "16.x",
+    "react-dom": "16.x",
+    "react-test-renderer": "16.x",
     "uxcore": "^0.16.5",
     "uxcore-button": "^0.4.5",
     "uxcore-kuma": "*",
@@ -50,7 +49,8 @@
     "classnames": "^2.1.2",
     "deep-equal": "~1.0.1",
     "object-assign": "^4.0.0",
-    "prop-types": "15.x"
+    "prop-types": "15.x",
+    "react-lifecycles-compat": "^3.0.4"
   },
   "contributors": [],
   "license": "MIT"
